--- a/public/blogs/post-8/index.html
+++ b/public/blogs/post-8/index.html
@@ -111,12 +111,14 @@
 </footer>
 <div class="copyright py-4 text-center text-white bg-dark">
     <div class="container">
-        <small>Copyright &#169; poinsla.xyz 2020 - <script>document.write(new Date().getFullYear());</script> | All Right Reserved.</small>
+        <p>Copyright © 2020 - 2021 <a href="https://poinsla.com">Poinsla.com</a> All Rights Reserved</p>
     </div>
 </div>
 
 <script src="https://poinsla.xyz/plugins/jquery/jquery.min.js"></script>
 <script src="https://poinsla.xyz/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="https://poinsla.xyz/plugins/aos/aos.js"></script>
+<script src="https://poinsla.xyz/plugins/typed/typed.min.js"></script>
+<script src="https://poinsla.xyz/plugins/emailjs/email.min.js"></script>
 <script src="https://poinsla.xyz/js/poinsla-site.js"></script></body>
 </html>
