--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,14 @@
             <img class="profile img-fluid d-block mx-auto mb-5 rounded-circle" src="/img/profile.jpeg" alt="Poinsla" data-aos="fade-up">
         </figure>
         <h1 data-aos="fade-up">I'am Roby Adi Putra</h1>
-        <p data-aos="fade-right">Junior Web Developer</p>
+        <div class="type-wrap" data-aos="fade-right">
+            <div id="typed-strings">
+                <span>
+                    <strong>Frontend Web Developer.</strong>
+                </span>
+            </div>
+            <span id="typed" style="white-space:pre;"></span>
+        </div>
         <ul class="social-media list-inline" data-aos="fade-left">
             <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#">
@@ -83,29 +90,35 @@
                 <figure><img class="about-image img-fluid rounded" src="/img/about-me.jpeg" alt="Roby Adi Putra"></figure>
             </div>
             <div class="col-lg">
-                <h3 class="about-name" data-aos="fade-up">I'am Roby</h3>
+                <h3 class="about-name mb-5" data-aos="fade-up">I'am Roby</h3>
                 <p data-aos="fade-up">Hei! My name is Roby, I'am a Web Developer. I have 2 tyears of experience on building webistes using HTML, CSS, JavaScript and WordPress. I also able to developing website using Frameworks, such as Bootstrap, React and any others technology.</p>
-                <a class="btn btn-info text-uppercase" data-aos="fade-up" href="#">Contact Now!</a>
+                <a class="btn btn-info text-uppercase mt-5" data-aos="fade-up" href="#">Contact Now!</a>
             </div>
         </div>
         <h5 class="text-center mt-5 mb-5" data-aos="fade-up">This is who I am in a nutshell</h5>
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-12 col-sm-12 mb-5" data-aos="fade-up">
-                    <div class="card" style="width: 18rem; height: 27rem;">
-                        <figure><img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-1.svg" alt="Poinsla"></figure>
+                    <div class="card" style="width: 18rem; height: 29rem;">
+                        <figure>
+                            <img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-1.svg" alt="Poinsla">
+                        </figure>
                         <div class="card-body text-center">I am graduated from Tourism School at Internation Tourism Collage, after graduated I worked in a Tours & Travel company engaged in operation based in Bali for 2 years and after that I joined PT Kebo Iwa Express as a booking agent, web developer and administration.</div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 mb-5" data-aos="fade-up">
-                    <div class="card" style="width: 18rem; height: 27rem;">
-                        <figure><img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-2.svg" alt="Poinsla"></figure>
+                    <div class="card" style="width: 18rem; height: 29rem;">
+                        <figure>
+                            <img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-2.svg" alt="Poinsla">
+                        </figure>
                         <div class="card-body text-center">I am a person who is very enthusiastic about technology especially programming and because I'am graduated from English, it makes it easier for me to learn programming to understand what programming is.</div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 mb-5" data-aos="fade-up">
-                    <div class="card" style="width: 18rem; height: 27rem;">
-                        <figure><img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-3.svg" alt="Poinsla"></figure>
+                    <div class="card" style="width: 18rem; height: 29rem;">
+                        <figure>
+                            <img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-3.svg" alt="Poinsla">
+                        </figure>
                         <div class="card-body text-center">My goal is to solve problems with technology. I believe anything can be overcome through commitment and hard work. Always up for learning new things.</div>
                     </div>
                 </div>
@@ -319,7 +332,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-html5"></i> HTML & <i class="fab fa-css3"></i> CSS</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-html5"></i> HTML & <i class="fab fa-css3"></i> CSS</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">70%</div>
                         </div>
@@ -327,7 +340,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-bootstrap"></i> Bootstrap</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-bootstrap"></i> Bootstrap</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">85%</div>
                         </div>
@@ -335,7 +348,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-phoenix-framework"></i> Materiallize</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-phoenix-framework"></i> Materiallize</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">75%</div>
                         </div>
@@ -343,7 +356,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-js-square"></i> JavaScript</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-js-square"></i> JavaScript</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 35%;">35%</div>
                         </div>
@@ -353,7 +366,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-react"></i> React Js</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-react"></i> React Js</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">40%</div>
                         </div>
@@ -361,7 +374,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-wordpress"></i> WordPress</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-wordpress"></i> WordPress</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;">65%</div>
                         </div>
@@ -369,7 +382,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-node-js"></i> Node Js</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-node-js"></i> Node Js</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">40%</div>
                         </div>
@@ -377,7 +390,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-joget"></i> jQuery</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-joget"></i> jQuery</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 55%;">55%</div>
                         </div>
@@ -387,50 +400,35 @@
         </div>
     </div>
 </section>
-
-<section class="this-contact pt-5 pb-5 bg-light" id="contact">
-    <div class="container">
-        <h2 class="text-uppercase text-center text-secondary mb-0">Contact Me</h2>
-        <div class="row">
-            <div class="contact-form col-lg-8 mx-auto">
-                <form id="contactForm" name="sentMessage" novalidate="novalidate" action="mail.php">
-                    <div class="control-group">
-                        <div class="form-group controls mb-0 pb-2">
-                            <label>Name</label>
-                            <input class="form-control" type="text" id="name" required="" placeholder="Enter your name">
-                            <small class="form-text text-danger help-block"></small>
+    <section class="this-contact pt-5 pb-5 bg-light " id="contact ">
+        <div class="container">
+            <h2 class="text-uppercase text-center text-secondary mb-0">Contact Me</h2>
+            <div class="row">
+                <div class="contact-form col-lg-8 mx-auto">
+                    <form id="contact-form">
+                        <div class="form-group">
+                            <input type="hidden" name="contact_number">
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group mb-0 pb-2">
-                            <label>Email Address</label>
-                            <input class="form-control" type="email" id="email" required="" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$">
-                            <small class="form-text text-danger help-block"></small>
+                        <div class="form-group">
+                            <label>Name:</label>
+                            <input class="form-control" type="text" name="from_name">
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group mb-0 pb-2">
-                            <label>Phone Number</label>
-                            <input class="form-control" type="tel" id="phone" required="" placeholder="Phone Number">
-                            <small class="form-text text-danger help-block"></small>
+                        <div class="form-group">
+                            <label>Email:</label>
+                            <input class="form-control" type="email" name="to_name">
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group mb-5 pb-2">
-                            <label>Message</label>
-                            <textarea class="form-control" id="message" required="" placeholder="Message" rows="5"></textarea>
-                            <small class="form-text text-danger help-block"></small>
+                        <div class="form-group">
+                            <label>Message:</label>
+                            <textarea class="form-control" name="message"></textarea>
                         </div>
-                    </div>
-                    <div id="success"></div>
-                    <div class="form-group">
-                        <button type="submit" class="btn-success form-control" id="sendMessageButton" name="submit">Send Message</button>
-                    </div>
-                </form>
+                        <div class="form-group">
+                            <input class="btn btn-lg btn-success" type="submit" value="Send">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</section><footer class="footer text-center text-white bg-dark pt-5">
+    </section><footer class="footer text-center text-white bg-dark pt-5">
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-5 mb-lg-0" data-aos="fade-down">
@@ -478,12 +476,14 @@
 </footer>
 <div class="copyright py-4 text-center text-white bg-dark">
     <div class="container">
-        <small>Copyright &#169; poinsla.xyz 2020 - <script>document.write(new Date().getFullYear());</script> | All Right Reserved.</small>
+        <p>Copyright © 2020 - 2021 <a href="https://poinsla.com">Poinsla.com</a> All Rights Reserved</p>
     </div>
 </div>
 
 <script src="https://poinsla.xyz/plugins/jquery/jquery.min.js"></script>
 <script src="https://poinsla.xyz/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="https://poinsla.xyz/plugins/aos/aos.js"></script>
+<script src="https://poinsla.xyz/plugins/typed/typed.min.js"></script>
+<script src="https://poinsla.xyz/plugins/emailjs/email.min.js"></script>
 <script src="https://poinsla.xyz/js/poinsla-site.js"></script></body>
 </html>
